Remove deprecated MaxPermSize.
Summary:
Fixed MaxPermSize deprecation warning in Maven
- Permanent generation is removed from garbage collection in favor of Metaspace in JDK 8. The MaxPermSize flag is deprecated.

Link: https://blogs.oracle.com/poonam/entry/about_g1_garbage_collector_permanent

Test Plan: Run maven tests.

Reviewers: bharat

Reviewed By: bharat

Subscribers: eng

Differential Revision: https://phabricator.dev.yugabyte.com/D1135